Commit For PK-474

--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
@@ -1,10 +1,13 @@
 ﻿@using Kooco.Pikachu.Members
+@using Kooco.Pikachu.Orders
 @using Kooco.Pikachu.UserAddresses
 @using Microsoft.Extensions.Logging
 @using Serilog
 @using Volo.Abp.AspNetCore.Components.Notifications
 @inherits PikachuComponentBase
 @inject IMemberAppService MemberAppService
+
+@inject IOrderAppService OrderAppService
 
 <Row>
     <Column ColumnSize="ColumnSize.Is4">
@@ -57,13 +60,13 @@
                 <h4>@L["Payment"]</h4>
                 <Row Class="py-3" HorizontalGutter="10">
                     <Column ColumnSize="ColumnSize.Is4">
-                        <PikachuCard Type="success" Title="@L["Paid"]" Amount="CumulativeFinancials?.TotalPaid" AmountVisible="true"></PikachuCard>
+                        <PikachuCard Type="success" Title="@L["Paid"]" Amount="PaidAmount" AmountVisible="true"></PikachuCard>
                     </Column>
                     <Column ColumnSize="ColumnSize.Is4">
-                        <PikachuCard Type="warning" Title="@L["Unpaid/Due"]" Amount="CumulativeFinancials?.TotalUnpaid" AmountVisible="true"></PikachuCard>
+                        <PikachuCard Type="warning" Title="@L["Unpaid/Due"]" Amount="UnpaidAmount" AmountVisible="true"></PikachuCard>
                     </Column>
                     <Column ColumnSize="ColumnSize.Is4">
-                        <PikachuCard Type="danger" Title="@L["Refunded"]" Amount="CumulativeFinancials?.TotalRefunded" AmountVisible="true"></PikachuCard>
+                        <PikachuCard Type="danger" Title="@L["Refunded"]" Amount="RefundedAmount" AmountVisible="true"></PikachuCard>
                     </Column>
                 </Row>
             </CardBody>
