--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberOrdersTab.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberOrdersTab.razor
@@ -4,19 +4,20 @@
 @using Kooco.Pikachu.Orders
 @inherits PikachuComponentBase
 @inject IMemberAppService MemberAppService
+@inject IOrderAppService OrderAppService
 
 <Card>
     <CardBody>
         <h4>@L["Orders"]</h4>
         <Row HorizontalGutter="10">
             <Column ColumnSize="ColumnSize.Is4">
-                <PikachuCard Type="success" Title="@L["Open"]" Count="CumulativeOrders?.TotalOrders" CountVisible="true"></PikachuCard>
+                <PikachuCard Type="success" Title="@L["Open"]" Count="Open" CountVisible="true"></PikachuCard>
             </Column>
             <Column ColumnSize="ColumnSize.Is4">
-                <PikachuCard Type="warning" Title="@L["Exchange"]" Count="CumulativeOrders?.TotalExchanges" CountVisible="true"></PikachuCard>
+                <PikachuCard Type="warning" Title="@L["Exchange"]" Count="Exchange" CountVisible="true"></PikachuCard>
             </Column>
             <Column ColumnSize="ColumnSize.Is4">
-                <PikachuCard Type="danger" Title="@L["Return"]" Count="CumulativeOrders?.TotalReturns" CountVisible="true"></PikachuCard>
+                <PikachuCard Type="danger" Title="@L["Return"]" Count="Return" CountVisible="true"></PikachuCard>
             </Column>
         </Row>
     </CardBody>
