--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Orders"
+@using Kooco.Pikachu.DeliveryTemperatureCosts
 @using Kooco.Pikachu.ElectronicInvoiceSettings
 @using Kooco.Pikachu.EnumValues;
 @using Kooco.Pikachu.Localization;
@@ -21,6 +22,7 @@
 @inject IOrderDeliveryRepository _OrderDeliveryRepository;
 @inject IOrderDeliveryAppService _OrderDeliveryAppService;
 @inject IGroupBuyAppService _groupBuyAppService;
+@inject IDeliveryTemperatureCostAppService _DeliveryTemperatureCostAppService;
 @using Microsoft.JSInterop;
 @inject IJSRuntime JSRuntime;
 
